# specs/001-resume-tailoring-feature/contracts/api_spec.yaml
@@ -481,6 +481,9 @@ components:
     JobAnalysis:
       type: object
       properties:
+        analysis_id:
+          type: string
+          format: uuid
         company_name:
           type: string
         job_title:
@@ -520,6 +523,7 @@ components:
           items:
             type: string
       required:
+        - analysis_id
         - company_name
         - job_title
         - location
